tests/NormalTests/paczka1/small_fuzzy/31029086.err
Error in line 1: tOdvTogUKRK A145 46,2
Error in line 12: arru4 S2k2 k2,9
Error in line 5: tOdvTogUKRK S19 21,2
Error in line 13: tOdvTogUKRK A145 77,6
